move away from swfobject towards normal object

--- a/bin-debug/main.html
+++ b/bin-debug/main.html
@@ -1,30 +1,21 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Really Cool Game</title>
-<script src="swfobject.js" type="text/javascript" charset="utf-8"></script>
-
-
-<script type="text/javascript">
-	var attributes = {id:"zennstuff"};
-	swfobject.embedSWF("sm main.swf","centerswf","600","400","10.0.0", null, null, null, attributes);
-</script>
-
-<style type="text/css">
-
-#border {
-    text-align:center;
-	
-}
-
-</style>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Seeker</title>
+  <style type="text/css">
+    #border {
+      text-align:center;
+    }
+  </style>
 </head>
 
-<body>
+  <body>
     <div id="border">
-        <div id="centerswf">
-        </div>
+      <object type="application/x-shockwave-flash" data="sm main.swf" width="900" height="600">
+        <param name='movie' value="sm main.swf"/>
+        <param name='id' value="zennstuff"/>
+      </object>
     </div>
-</body>
+  </body>
 </html>
